--- a/front/html/login.html
+++ b/front/html/login.html
@@ -33,7 +33,7 @@
         <label for="senha">Senha</label>
         <input type="password" id="senha" name="senha" required>
 
-        <a href="página_inicial.html" class="logout">Login</a>
+        <a href="#" class="logout">Login</a>
     </form>
 </main>
 
