--- a/front/html/pagamento.html
+++ b/front/html/pagamento.html
@@ -38,6 +38,8 @@
         <h3>Dados do Hóspede</h3>
         <input type="text" placeholder="Nome completo" required>
         <input type="email" placeholder="Email" required>
+        <input type="tel" placeholder="Telefone" required>
+        <input type="number" placeholder="CPF" required>
 
         <h3>Dados do Cartão</h3>
         <input type="text" placeholder="Número do Cartão" required>
