--- a/front/html/pagina_inicial.html
+++ b/front/html/pagina_inicial.html
@@ -36,7 +36,7 @@
 
     <div class="welcome">
         <h1>Bem-vindo ao Hazbin Hotel, seu caminho questionável
-            até a redenção!
+            até a reabilitação!
         </h1>
     </div>
 
