--- a/front/html/sobre_nos.html
+++ b/front/html/sobre_nos.html
@@ -145,6 +145,30 @@
     </div>
 </div>
 
+<div class="container-devs">
+    <h1 class="devs-titulo">Equipe de Desenvolvedores/Proprietários</h1>
+    <br>
+    <div class="devs-grid">
+        <div class="dev-card">
+            <img src="../images/jesse.jpg" alt="Jessé">
+            <p>Jessé - Front-end</p>
+        </div>
+        <div class="dev-card">
+            <img src="../images/vitin.jpg" alt="Vitinho">
+            <p>Vitinho - Front-end</p>
+        </div>
+        <div class="dev-card">
+            <img src="../images/arthur.jpg" alt="Arthur">
+            <p>Arthur - Front-end</p>
+        </div>
+        <div class="dev-card">
+            <img src="../images/maradona.jpg" alt="Diego">
+            <p>Diego - Back-end</p>
+        </div>
+    </div>
+</div>
+
+
     </main>
 
     <footer>
