--- a/front/html/avaliacoes.html
+++ b/front/html/avaliacoes.html
@@ -38,7 +38,7 @@
             <img src="../images/lucifer2.png" alt="Lucifer" class="perfil-img">
             <h3>@Lucifer_Morningstar</h3>
         </div>
-        <p>"Excelente estadia! O hotel da minha filha é o melhor do inferno."</p>
+        <p>"Excelente estadia! O hotel da minha filha é o melhor de toda a Cidade Pentagrama."</p>
         <div class="avaliacao-actions">
     <button class="like">👍 <span class="like-count">666</span></button>
     <button class="dislike">👎 <span class="dislike-count">2</span></button>
