--- a/front/html/duvidas.html
+++ b/front/html/duvidas.html
@@ -46,7 +46,7 @@
 
     <div class="faq">
         <h2>📍 Onde fica localizado o Hazbin Hotel?</h2>
-        <p>Você pode encontrar todas as informações na nossa <a href="localizacao.html">página de localização</a>, incluindo um mapa detalhado do submundo.</p>
+        <p>Você pode encontrar todas as informações na nossa <a href="localizacao.html">página de localização</a>, incluindo um mapa detalhado da Cidade Pentagrama.</p>
     </div>
 
     <div class="faq">
