--- a/front/html/programacao.html
+++ b/front/html/programacao.html
@@ -43,19 +43,19 @@
     </div>
 
     <div class="evento">
-        <h2>🔥 Tour pelo Inferno</h2>
+        <h2>🔥 Tour pelela Cidade Pentagrama</h2>
         <p>Data: 22/08/25<br>
         Hora: 15h00<br>
         Ponto de Encontro: Recepção do Hotel<br>
-        Explore os pontos turísticos mais... peculiares do submundo. Fotos não recomendadas.</p>
+        Explore os pontos turísticos mais... peculiares de nossa região. Fotos não recomendadas.</p>
     </div>
 
     <div class="evento">
-        <h2>⚔️ Treinamento para Combate contra Exércitos Angelicais</h2>
+        <h2>🎉 Festea de Aniversário da Niffty</h2>
         <p>Data: 23/08/25<br>
         Hora: 10h00<br>
-        Local: Subsolo Secreto (não pergunte como chegar)<br>
-        Prepare-se para a batalha final com táticas de sobrevivência e risadas (ou gritos).</p>
+        Local: Torre dos Vees<br>
+        O Hotel nunca esteve tão limpo.</p>
     </div>
 
     <div class="evento">
@@ -63,7 +63,7 @@
         <p>Data: 24/08/25<br>
         Hora: 20h00<br>
         Local: Sala de Entretenimento<br>
-        Pipoca, filmes clássicos do submundo e uma pitada de terror vintage.</p>
+        Pipoca, filmes clássicos e uma pitada de terror vintage.</p>
     </div>
 </main>
 
