--- a/front/html/reserva_master.html
+++ b/front/html/reserva_master.html
@@ -63,6 +63,8 @@
             <li>Menu disponível no quarto e pelo QR code.</li>
         </ul>
 
+        <img src="../images/qr.png" alt="QR Code" class="code-image">
+
         <input type="hidden" name="quarto" value="Master">
         <input type="hidden" name="preco" value="500">
 
