--- a/front/html/reservas.html
+++ b/front/html/reservas.html
@@ -38,7 +38,7 @@
         <img src="../images/quarto 1.png" alt="Quarto Standard">
         <div class="info">
             <h2>Suíte Standard</h2>
-            <p>Quarto básico, não tem segredo. Se quiser comforto, paga mais caro pelas suítes melhores.</p>
+            <p>Quarto básico, não tem segredo. Vem com cama, banheiro e geladeira.</p>
             <a href="reserva_standard.html"><button>Agendar Reserva</button></a>
         </div>
     </div>
@@ -47,7 +47,7 @@
         <img src="../images/quarto 2.png" alt="Quarto Luxo">
         <div class="info">
             <h2>Suíte de Luxo</h2>
-            <p>Confortável e aconchegante, com cama de casal (de qualidade duvidosa) e banheiro.</p>
+            <p>Confortável e aconchegante, com cama de casal e TV.</p>
             <a href="reserva_luxo.html"><button>Agendar Reserva</button></a>
         </div>
     </div>
@@ -56,7 +56,7 @@
         <img src="../images/quarto 3.png" alt="Suíte Master">
         <div class="info">
             <h2>Suíte Master</h2>
-            <p>Ampla suíte com cama king-size, biblioteca, banheiro e aranhas de estimação fazendo teias pelo teto!</p>
+            <p>Ampla suíte com cama king-size, biblioteca, banheiro e vista para a cidade!</p>
             <a href="reserva_master.html"><button>Agendar Reserva</button></a>
         </div>
     </div>
