--- a/front/html/sobre_nos.html
+++ b/front/html/sobre_nos.html
@@ -39,17 +39,17 @@
           <h1 class="proposito">Qual o propósito do nosso projeto?</h1>
           <br>
           <h2 class="proposito-texto">Nosso objetivo é oferecer um espaço seguro e acolhedor para todos os hóspedes,
-             independentemente de sua origem ou passado, além de garantir uma estadia divertida e, no mínimo, inesquecível,
-              mesmo que não seja pelos motivos que você espera.</h2>
+             independentemente de sua origem ou passado, além de garantir uma estadia divertida e, no mínimo, inesquecível.
+            </h2>
               <br>
               <br>
               <h1 class="local">Por que escolhemos esta localização?</h1>
               <br>
-              <h2>Por quê escolhemos o inferno como localização, você deve estar se perguntando. O inferno é quente o ano todo e livre de imprevistos como mudanças climáticas ou desastres naturais,
-                contanto que você não se preocupe com o caos e a destruição que ocorrem ocasionalmente nas ruas. Além disso, o inferno é um lugar onde todos são bem-vindos,
+              <h2>Por quê escolhemos a Cidade Pentagrama como localização, você deve estar se perguntando. Aqui é quente o ano todo e livre de imprevistos como mudanças climáticas ou desastres naturais,
+                contanto que você não se preocupe com o caos e a destruição que ocorrem ocasionalmente nas ruas. Além disso, é um lugar onde todos são bem-vindos,
                 independentemente de sua origem ou passado.
                 Aqui, você pode relaxar e aproveitar a companhia de pessoas de todos os tipos, sem julgamentos ou discriminação. Além disso, o hotel fica
-                localizado em uma área estratégica, perto de várias atrações turísticas e pontos de interesse, tornando-o o local ideal para quem deseja explorar o inferno.
+                localizado em uma área estratégica, perto de várias atrações turísticas e pontos de interesse, tornando-o o local ideal para quem deseja explorar a cidade.
               </h2>
               <br>
               <br>
@@ -59,7 +59,7 @@
                 incluindo quartos confortáveis, restaurantes deliciosos, entretenimento ao vivo e muito mais. Além disso,
                 nossa equipe é altamente treinada e dedicada a garantir que sua estadia seja a melhor possível.
                 Se você está procurando um lugar para relaxar, se divertir ou simplesmente passar um tempo com amigos, o Hazbin Hotel é o lugar certo para você.
-                Além disso, o Hazbin Hotel é o lugar mais seguro de todo o inferno, com segurança 24 horas por dia, 7 dias por semana, totalmente à prova de ataques angelicais.
+                Além disso, o Hazbin Hotel é o lugar mais seguro de todo o Brasil, com segurança 24 horas por dia, 7 dias por semana.
               </h2>
               <br>
               <br>
@@ -71,11 +71,11 @@
                   <div class="promo-grid">
     <div class="promo-item">
         <img src="../images/ship.png" alt="Imagem Promocional 1">
-        <p>Alastor "testando" uma das novas máquinas do Sir Pentious. (foto tirada no dia 23/6/25)</p>
+        <p>Alastor "testando" uma das nossos novos veículos de turismo. (foto tirada no dia 23/6/25)</p>
     </div>
     <div class="promo-item">
         <img src="../images/evento1.png" alt="Imagem Promocional 2">
-        <p>Alastor dando "boas-vindas" aos nossos hóspedes indesejados. (foto tirada no dia 18/8/25)</p>
+        <p>Alastor dando "boas-vindas" aos nossos hóspedes. (foto tirada no dia 18/8/25)</p>
     </div>
 </div>
               <br>
