--- a/front/html/avaliacoes.html
+++ b/front/html/avaliacoes.html
@@ -134,7 +134,7 @@
 </div>
 </footer>
 
-<script src="../../back/avaliacoes.js"></script>
-
+<script src="../js/avaliacoes.js"></script>
+<script type="module" src="../js/vericacao.js"></script>
 </body>
 </html>
