--- a/front/html/cadastro.html
+++ b/front/html/cadastro.html
@@ -35,7 +35,8 @@
 
         <label for="senha">Senha</label>
         <input type="password" id="senha" name="senha" required>
-
+        <i class="fa-solid fa-eye toggle-olho" onclick="toggleSenha(this)"></i>
+        
         <label for="CPF">CPF</label>
         <input type="cpf" id="cpf" name="cpf" required>
 
@@ -59,5 +60,6 @@
     </p>
 </footer>
 
+<script type="module" src="../js/cadastro.js"></script>
 </body>
 </html>
