--- a/front/html/contato.html
+++ b/front/html/contato.html
@@ -70,5 +70,7 @@
     <a href="login.html" class="logout">Logout</a>
 </div>
     </footer>
+    
+    <script type="module" src="../js/vericacao.js"></script>
 </body>
 </html>
