--- a/front/html/login.html
+++ b/front/html/login.html
@@ -32,8 +32,9 @@
 
         <label for="senha">Senha</label>
         <input type="password" id="senha" name="senha" required>
+        <i class="fa-solid fa-eye toggle-olho" onclick="toggleSenha(this)"></i>
 
-        <a href="#" class="logout">Login</a>
+        <button type="submit" class="btn-login">Login</button>
     </form>
 </main>
 
@@ -50,5 +51,6 @@
     </p>
 </footer>
 
+<script type="module" src="../js/login.js"></script>
 </body>
 </html>
