--- a/front/html/pagamento.html
+++ b/front/html/pagamento.html
@@ -63,5 +63,7 @@
 </div>
 </footer>
 
+<script src="../js/pagamento.js"></script>
+<script type="module" src="../js/vericacao.js"></script>
 </body>
 </html>
