--- a/front/html/sobre_nos.html
+++ b/front/html/sobre_nos.html
@@ -63,23 +63,6 @@
               </h2>
               <br>
               <br>
-              <h1 class="imagens">Imagens Promocionais</h1>
-              <br>
-              <h2>Aqui estão algumas das imagens dos nossos eventos mais recentes:</h2>
-              <br>
-              <br>
-                  <div class="promo-grid">
-    <div class="promo-item">
-        <img src="../images/ship.png" alt="Imagem Promocional 1">
-        <p>Alastor "testando" uma das nossos novos veículos de turismo. (foto tirada no dia 23/6/25)</p>
-    </div>
-    <div class="promo-item">
-        <img src="../images/evento1.png" alt="Imagem Promocional 2">
-        <p>Alastor dando "boas-vindas" aos nossos hóspedes. (foto tirada no dia 18/8/25)</p>
-    </div>
-</div>
-              <br>
-              <br>
               <h1 class="hotel-evolucao">Evolução do Nosso Hotel</h1>
               <br>
               <div class="evolucao-grid">
@@ -183,5 +166,6 @@
 </div>
     </footer>
 
+    <script type="module" src="../js/vericacao.js"></script>
 </body>
 </html>
