--- a/front/index.html
+++ b/front/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <!-- Redirecionar para ./pages/login.html -->
+    <title>Redirecionamento</title>
     <script>
-        window.location.href = "html/pagina_inicial.html";
+        window.location.href = '../front/html/página_inicial.html';
     </script>
-</body>
+</head>
+
 </html>
